--- a/ingress.yml
+++ b/ingress.yml
@@ -13,6 +13,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: api
+                name: backend
                 port:
                   number: 8080
